kotlin-ide/idea/testData/checker/Bounds.kt
  open class A {}
  open class B<T : A>()

  class Pair<A, B>

  abstract class C<T : B<<error>Int</error>>, X : (B<<error>Char</error>>) -> Pair<B<<error>Any</error>>, B<A>>>() : B<<error>Any</error>>() { // 2 errors
    val a = B<<error>Char</error>>() // error

    abstract val x : (B<<error>Char</error>>) -> B<<error>Any</error>>
  }

